--- a/index.html
+++ b/index.html
@@ -27,111 +27,108 @@
 
     <div class="sec-dashboard">
       <div class="wr-card profile">
-        <div class="prof-status">
-          <button class="daily active">Daily</button>
-          <button class="weekly">Weekly</button>
-          <button class="monthly">Monthly</button>
-        </div>
-
         <div class="prof-details">
           <div class="wr-profile-img">
             <img src="images/image-jeremy.png" alt="Image of Jeremy">
           </div>
 
-          <div class="wr-profile-details">
+          <div class="wr-prof-details">
             <h2><span>Report for</span><span>Jeremy Robson</span></h2>
           </div>
         </div>
-      </div>
 
-      <div class="wr-card work">
-        <div class="background"></div>
-        <div class="foreground">
-          <div class="header">
-            <h3>Work</h3>
-            <div class="wr-img"><img src="images/icon-ellipsis.svg" alt="Three dots in horizontal"></div>
-          </div>
-
-          <div class="body">
-            <div class="status"><span></span></div>
-            <div class="prev-status"><span></span></div>
-          </div>
+        <div class="prof-status">
+          <button class="daily active">Daily</button>
+          <button class="weekly">Weekly</button>
+          <button class="monthly">Monthly</button>
         </div>
       </div>
 
-      <div class="wr-card play">
-        <div class="background"></div>
-        <div class="foreground">
-          <div class="header">
-            <h3>Play</h3>
-            <div class="wr-img"><img src="images/icon-ellipsis.svg" alt="Three dots in horizontal"></div>
-          </div>
+      <div class="wr-stat-cards">
+        <div class="wr-card work">
+          <div class="foreground">
+            <div class="header">
+              <h3>Work</h3>
+              <div class="wr-img"><img src="images/icon-ellipsis.svg" alt="Three dots in horizontal"></div>
+            </div>
 
-          <div class="body">
-            <div class="status"><span></span></div>
-            <div class="prev-status"><span></span></div>
+            <div class="body">
+              <div class="status"><span></span></div>
+              <div class="prev-status"><span></span></div>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="wr-card study">
-        <div class="background"></div>
-        <div class="foreground">
-          <div class="header">
-            <h3>Study</h3>
-            <div class="wr-img"><img src="images/icon-ellipsis.svg" alt="Three dots in horizontal"></div>
-          </div>
+        <div class="wr-card play">
+          <div class="foreground">
+            <div class="header">
+              <h3>Play</h3>
+              <div class="wr-img"><img src="images/icon-ellipsis.svg" alt="Three dots in horizontal"></div>
+            </div>
 
-          <div class="body">
-            <div class="status"><span></span></div>
-            <div class="prev-status"><span></span></div>
-          </div>
-        </div>
-      </div>
-
-      <div class="wr-card exercise">
-        <div class="background"></div>
-        <div class="foreground">
-          <div class="header">
-            <h3>Exercise</h3>
-            <div class="wr-img"><img src="images/icon-ellipsis.svg" alt="Three dots in horizontal"></div>
-          </div>
-
-          <div class="body">
-            <div class="status"><span></span></div>
-            <div class="prev-status"><span></span></div>
+            <div class="body">
+              <div class="status"><span></span></div>
+              <div class="prev-status"><span></span></div>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="wr-card social">
-        <div class="background"></div>
-        <div class="foreground">
-          <div class="header">
-            <h3>Social</h3>
-            <div class="wr-img"><img src="images/icon-ellipsis.svg" alt="Three dots in horizontal"></div>
-          </div>
+        <div class="wr-card study">
+          <div class="foreground">
+            <div class="header">
+              <h3>Study</h3>
+              <div class="wr-img"><img src="images/icon-ellipsis.svg" alt="Three dots in horizontal"></div>
+            </div>
 
-          <div class="body">
-            <div class="status"><span></span></div>
-            <div class="prev-status"><span></span></div>
-          </div>
-        </div>
-      </div>
-
-      <div class="wr-card self-care">
-        <div class="background"></div>
-        <div class="foreground">
-          <div class="header">
-            <h3>Self Care</h3>
-            <div class="wr-img"><img src="images/icon-ellipsis.svg" alt="Three dots in horizontal"></div>
-          </div>
-
-          <div class="body">
-            <div class="status"><span></span></div>
-            <div class="prev-status"><span></span></div>
+            <div class="body">
+              <div class="status"><span></span></div>
+              <div class="prev-status"><span></span></div>
+            </div>
           </div>
         </div>
+
+        <div class="wr-card exercise">
+          <div class="foreground">
+            <div class="header">
+              <h3>Exercise</h3>
+              <div class="wr-img"><img src="images/icon-ellipsis.svg" alt="Three dots in horizontal"></div>
+            </div>
+
+            <div class="body">
+              <div class="status"><span></span></div>
+              <div class="prev-status"><span></span></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="wr-card social">
+          <div class="foreground">
+            <div class="header">
+              <h3>Social</h3>
+              <div class="wr-img"><img src="images/icon-ellipsis.svg" alt="Three dots in horizontal"></div>
+            </div>
+
+            <div class="body">
+              <div class="status"><span></span></div>
+              <div class="prev-status"><span></span></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="wr-card self-care">
+          <div class="foreground">
+            <div class="header">
+              <h3>Self Care</h3>
+              <div class="wr-img"><img src="images/icon-ellipsis.svg" alt="Three dots in horizontal"></div>
+            </div>
+
+            <div class="body">
+              <div class="status"><span></span></div>
+              <div class="prev-status"><span></span></div>
+            </div>
+          </div>
+        </div>
+
       </div>
 
     </div>
